--- a/Site Rodrigo/style.css
+++ b/Site Rodrigo/style.css
@@ -1,5 +1,6 @@
 body{
     background: #f7f7f7;
+    font-family: Verdana;
 }
 
 .photo{
@@ -9,6 +10,16 @@ body{
 
 #title, .subtitle, .post_title {
     color: #505050; /*Configura a cor do texto*/
+}
+
+#title{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+a{
+    text-decoration: line-through;
+    color: #505050;
 }
 
 .post_title{
@@ -29,6 +40,7 @@ body{
 .post_content{
     margin: 0;
     margin-bottom: 15px;
+    text-transform: capitalize;
 }
 
 .post_image{
