Configurando dimenssões e alinhamento de texto e imagens

--- a/Site Rodrigo/style.css
+++ b/Site Rodrigo/style.css
@@ -1,6 +1,8 @@
 body{
     background: #f7f7f7;
     font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
 }
 
 .photo{
@@ -15,6 +17,11 @@ body{
 #title{
     font-size: 40px;
     text-transform: uppercase;
+    padding: 15px;
+}
+
+.subtitle{
+    padding: 15px;
 }
 
 a{
@@ -41,10 +48,12 @@ a{
     margin: 0;
     margin-bottom: 15px;
     text-transform: capitalize;
+    text-align: justify;
 }
 
 .post_image{
     margin-bottom: 15px;
+    width: 100%;
 } 
 
 .contact_list{
